--- a/ApexZero.com/bin/ApexZero.com.dll.config
+++ b/ApexZero.com/bin/ApexZero.com.dll.config
@@ -5,6 +5,15 @@
   -->
 
 <configuration>
+    <connectionStrings>
+        <add
+            name="PrimaryDB"
+            connectionString=
+                "server=www.apexzero.com,8712;Initial Catalog=PsychOfSleep;uid=SleepUser;password=Superpanda64"
+            providerName="System.Data.SqlClient"
+        />
+    </connectionStrings>
+    
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
