--- a/ApexZero.com/bin/ApexZero.com.dll.config
+++ b/ApexZero.com/bin/ApexZero.com.dll.config
@@ -9,7 +9,7 @@
         <add
             name="PrimaryDB"
             connectionString=
-                "server=www.apexzero.com,8712;Initial Catalog=PsychOfSleep;uid=SleepUser;password=Superpanda64"
+                "server=1.1.1.2,8712;Initial Catalog=PsychOfSleep;uid=SleepUser;password=Superpanda64"
             providerName="System.Data.SqlClient"
         />
     </connectionStrings>
